【功能】增加内容

--- a/_posts/2014-01-29-hello-2015.md
+++ b/_posts/2014-01-29-hello-2015.md
@@ -38,6 +38,8 @@ __H.Li 的 Blog 就这么开通了。__
 
 正好之前就有关注过 [GitHub Pages](https://pages.github.com/) + [Jekyll](http://jekyllrb.com/) 快速 Building Blog 的技术方案，非常轻松时尚。
 
+参考链接：[http://www.jianshu.com/p/07064eb79740](http://www.jianshu.com/p/07064eb79740)
+
 其优点非常明显：
 
 * **Markdown** 带来的优雅写作体验
