--- a/_posts/2014-01-29-hello-2015.md
+++ b/_posts/2014-01-29-hello-2015.md
@@ -40,6 +40,13 @@ __H.Li 的 Blog 就这么开通了。__
 
 参考链接：[http://www.jianshu.com/p/07064eb79740](http://www.jianshu.com/p/07064eb79740)
 
+
+**说明：当运行 jekyll server 之后，在浏览器中输入：**
+
+[http://127.0.0.1:4000/](http://127.0.0.1:4000/) 或 
+[http://localhost:4000](http://127.0.0.1:4000/) 即可
+
+
 其优点非常明显：
 
 * **Markdown** 带来的优雅写作体验
